public class Main {

    public static void main(String[] args) {
        Partition.display_partition();
        Intro_screen.display_intro();
        Partition.display_partition();
        Input_Scanner.Intro_scan();
        Partition.display_partition();
        Main_menu.display_MainMenu();
        Partition.display_partition();
    }
}